frontend/test/should_pass/exectype_VFree.grg
using exectype;

rule r
{
	modify  {
		exec(i:int=0 && {vfree(i)});
	}
}