frontend/test/should_fail/exectype_AssignSetmapSizeToVar3.grg
using exectype;

rule r
{
	modify  {
		exec(y:int=42 ;> {i:int=y.size()});
	}
}